<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@color/grey"
    android:clipToOutline="true"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/eventImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_icon" />

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Event Title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/eventDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Nov 3, 2025 · Madison Square Garden"
        android:textColor="@color/hinty"
        android:textSize="13sp" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="Join Waiting List"
        android:textColor="@color/black" />
</LinearLayout>