...
            android:textSize="22sp"
            android:fontFamily="sans-serif-medium"/>
    </RelativeLayout>

    <!-- Content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:clipToPadding="false"
        android:background="@color/background_black"
        app:layout_constraintTop_toBottomOf="@id/historyHeader"
...
